LFLT-393 Maintenance - update outdated and vulnerable external dependencies  - Updated dependencies