@@ -7,7 +7,7 @@
     <groupId>hu.psprog.leaflet</groupId>
     <artifactId>cbfs</artifactId>
     <packaging>pom</packaging>
-    <version>1.4.4-dev</version>
+    <version>1.4.5-dev</version>
     <name>Leaflet Content Backup Failover System</name>
 
     <modules>
@@ -21,25 +21,25 @@
         <java.version>11</java.version>
 
         <!-- leaflet internal dependency versions -->
-        <leaflet-rcp.version>1.4.0</leaflet-rcp.version>
-        <leaflet.tlp-appender.version>1.1.0</leaflet.tlp-appender.version>
-        <leaflet.bridge.version>3.2.3</leaflet.bridge.version>
-        <leaflet.rest-api.version>1.6.6</leaflet.rest-api.version>
+        <leaflet-rcp.version>1.5.4</leaflet-rcp.version>
+        <leaflet.tlp-appender.version>1.1.1</leaflet.tlp-appender.version>
+        <leaflet.bridge.version>3.2.4</leaflet.bridge.version>
+        <leaflet.rest-api.version>1.6.7</leaflet.rest-api.version>
 
         <!-- dependency versions -->
-        <spark-java.version>2.8.0</spark-java.version>
-        <spring-framework.version>5.1.3.RELEASE</spring-framework.version>
+        <spark-java.version>2.9.1</spark-java.version>
+        <spring-framework.version>5.2.3.RELEASE</spring-framework.version>
         <logback.version>1.2.3</logback.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <jackson.version>2.9.7</jackson.version>
-        <commons.lang.version>3.8.1</commons.lang.version>
-        <h2.version>1.4.196</h2.version>
-        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <jackson.version>2.10.2</jackson.version>
+        <commons.lang.version>3.9</commons.lang.version>
+        <h2.version>1.4.200</h2.version>
+        <javax.servlet-api.version>4.0.3</javax.servlet-api.version>
         <metrics-spring.version>3.1.3</metrics-spring.version>
         <dropwizard-metrics.version>3.2.3</dropwizard-metrics.version>
-        <hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
+        <hibernate-validator.version>6.1.2.Final</hibernate-validator.version>
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
-        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 
         <!-- test framework versions -->
         <junit.version>4.12</junit.version>
@@ -47,7 +47,7 @@
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <javax.el-api.version>3.0.0</javax.el-api.version>
         <junit.params.version>1.0.5</junit.params.version>
-        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
         <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
 
@@ -111,6 +111,12 @@
                 <groupId>com.sparkjava</groupId>
                 <artifactId>spark-core</artifactId>
                 <version>${spark-java.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>javax.servlet-api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- REST dependencies -->
@@ -225,12 +231,12 @@
                 <version>${commons.lang.version}</version>
             </dependency>
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
+                <groupId>jakarta.servlet</groupId>
+                <artifactId>jakarta.servlet-api</artifactId>
                 <version>${javax.servlet-api.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>${hibernate-validator.version}</version>
             </dependency>
@@ -273,6 +279,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>com.fasterxml.jackson.jaxrs.json/com.fasterxml.jackson.jaxrs.json=leaflet.app.cbfs.core</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
